# stable_pydantic

./: README.md  pyproject.toml
schemas/: current.py
scripts/: main.py  mod.py
src/stable_pydantic/: clean.py  compatibility.py  imports.py  model_graph.py  source.py  utils.py
