[project]
name = "stable-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "QuartzLibrary", email = "81446760+QuartzLibrary@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.4"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.0"]
